--- a/_posts/2016-09-09-CV.markdown
+++ b/_posts/2016-09-09-CV.markdown
@@ -121,15 +121,15 @@ Java & Android Course<br/>
 <p class="break"></p>
 
 #### **EXHIBITIONS**
-<u>OCT 22 - 28 2014</u><br/>
+<u>OCT 22 - 28, 2014</u> <br/>
 2014 Kookmin Univ. Dept Interior Design Graduation Exhibition<br/>
 Ara Art center, Seoul, Korea
 
-<u>DEC 17 - 21 2012</u><br/>
+<u>DEC 17 - 21, 2012</u> <br/>
 The 7th Universal Design Contest Winner's Exhibition<br/>
 Seoul Metro Hyehwa Station, Seoul, Korea
 
-<u>JUL 8  2012</u><br/>
+<u>JUL 8 2012</u> <br/>
 Seagate Hardbot Contest Exhibition<br/>
 The Avenue Art center, Seoul, Korea
 
