--- a/_posts/2016-10-01-markdown.markdown
+++ b/_posts/2016-10-01-markdown.markdown
@@ -4,6 +4,7 @@ layout: post
 title:  "Markdown Syntax"
 date:   2016-10-01 17:20:00 +0900
 categories: Front-end
+comments: true
 ---
 
 본 블로그에서 마크다운으로 글 쓰는 방법은 다음과 같다.
