--- a/_posts/2016-10-01-markdown.md
+++ b/_posts/2016-10-01-markdown.md
@@ -1,9 +1,8 @@
-{::comment}
 ---
 layout: post
 title:  "Markdown Syntax"
 date:   2016-10-01 17:20:00 +0900
-categories: Front-end
+category: Front-end
 comments: true
 ---
 
