fix spelling error

--- a/_posts/design/2017-07-31-field.md
+++ b/_posts/design/2017-07-31-field.md
@@ -45,7 +45,7 @@ comments: true
 
 필드의 놀라운 점은 반복적인 클라이언트와의 작업에서 벗어나 스튜디오의 자체 프로젝트도 직접 기획하고 제작한다. 모두의 스트레스를 해소시키고, 정말 즐기면서 작업하는 모습, 그리고 그 작품을 관람하러 오는 사람들 모두가 너무 멋있었다.
 
-다만 아쉬운 점이 있다면, 비즈니스 모델에 있어서 변화가 없다는 것이다. 디자인 스튜디오가 추구하는 가치와 기업이 추구하는 가치와 성격이 꽤 다르긴 하지만 스튜디오의 원활한 운영을 위해서도 자본을 완전히 배제할 수는 없다. 오히려 돈을 더 많이 버는 것이 이 시대의 위대한 디자이너와 예술가라고 볼 수 있다. 스타트업의 범람으로 기업에 대한 가치와 정의가 바뀌어 간다. 스튜디오는 창업을 한다는 면에서 스타트업이라고 볼 수도 있지만 개인적으로는 아니라는 입장이다. 스타트업은 대게 사람들의 문제를 찾고, 그 문제를 해결하는 서비스 혹은 제품을 전달하는 것이고, J 커브로 폭발적인 성장을 하는 것이 목적이다. 나는 스튜디오도 탈바꿈해야 한다고 본다. 스튜디오에게 제품을 만들라는 것은 아니지만, 스타트업의 접근 방법을 적용해보는 것도 나쁘지 않을 것 같다. 단순히 많은 인력을 투입시켜 프로젝트 수주량을 높이는 식의 방법은 결과물에 있어서도, 기업의 운영면에서도 망하는 길이라고 본다. 내가 만약 스튜디오를 운영한다면 디자인 작업과 동시에 여력을 키워 제품이나 서비스, 프로세스에 대해 투자할 것이다. 디자인 결과물은 단순한 조형의 조합으로 사람들에게 매력적인 경험을 줄 수 있다고 본다면 고부가 가치를 지닌 제품/서비스라고도 볼 수 있다. 문득 떠오르는 아이디어이지만, 디자인 결과물의 퀄리티를 해치지 않으면서도 원활한 현금흐름을 유지하기 위해서는 디자인의 프로세스를 최적화하는 방향이 더 나은 의사결정일 수도 있다.
+다만 아쉬운 점이 있다면, 비즈니스 모델에 있어서 변화가 없다는 것이다. 디자인 스튜디오가 추구하는 가치와 기업이 추구하는 가치와 성격이 꽤 다르긴 하지만 스튜디오의 원활한 운영을 위해서도 자본을 완전히 배제할 수는 없다. 오히려 돈을 더 많이 버는 것이 이 시대의 위대한 디자이너와 예술가라고 볼 수 있다. 스타트업의 범람으로 기업에 대한 가치와 정의가 바뀌어 간다. 스튜디오는 창업을 한다는 면에서 스타트업이라고 볼 수도 있지만 개인적으로는 아니라는 입장이다. 스타트업은 대개 사람들의 문제를 찾고, 그 문제를 해결하는 서비스 혹은 제품을 전달하는 것이고, J 커브로 폭발적인 성장을 하는 것이 목적이다. 나는 스튜디오도 탈바꿈해야 한다고 본다. 스튜디오에게 제품을 만들라는 것은 아니지만, 스타트업의 접근 방법을 적용해보는 것도 나쁘지 않을 것 같다. 단순히 많은 인력을 투입시켜 프로젝트 수주량을 높이는 식의 방법은 결과물에 있어서도, 기업의 운영면에서도 망하는 길이라고 본다. 내가 만약 스튜디오를 운영한다면 디자인 작업과 동시에 여력을 키워 제품이나 서비스, 프로세스에 대해 투자할 것이다. 디자인 결과물은 단순한 조형의 조합으로 사람들에게 매력적인 경험을 줄 수 있다고 본다면 고부가 가치를 지닌 제품/서비스라고도 볼 수 있다. 문득 떠오르는 아이디어이지만, 디자인 결과물의 퀄리티를 해치지 않으면서도 원활한 현금흐름을 유지하기 위해서는 디자인의 프로세스를 최적화하는 방향이 더 나은 의사결정일 수도 있다.
 
 <br/>
 
