add new posts, arrange posts

--- a/_drafts/2016-10-01-markdown.md
+++ b/_drafts/2016-10-01-markdown.md
@@ -45,4 +45,13 @@ end
 print_hi('Tom')
 #=> prints 'Hi, Tom' to STDOUT.
 {% endhighlight %}
-{:/comment}
+
+<!-- {:/comment} -->
+
+```javascript
+console.log(1234);
+
+function sum(a, b){
+  return a + b;
+}
+```
