--- a/_posts/front-end/2016-10-01-markdown.md
+++ b/_posts/front-end/2016-10-01-markdown.md
@@ -27,6 +27,16 @@ comments: true
 
 <p class="break"></p>
 
+
+#### 내부 링크
+```markdown
+[타이틀](#name)
+
+---
+
+### <a name="name">타이틀</a>
+```
+
 #### 줄바꿈
 
 {% highlight html %}
@@ -55,3 +65,5 @@ function sum(a, b){
   return a + b;
 }
 ```
+
+
