--- a/_posts/front-end/2016-10-01-markdown.md
+++ b/_posts/front-end/2016-10-01-markdown.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title:  "Markdown Syntax"
+desc: 기본적인 마크다운 문법
 date:   2016-10-01 17:20:00 +0900
 category: Front-end
 comments: true
