--- a/blog/2024-11-26-about.md
+++ b/blog/2024-11-26-about.md
@@ -9,7 +9,9 @@ hide_table_of_contents: true
 
 안녕하세요. 박준호입니다.
 
-소프트웨어 엔지니어로 일하고 있고
+<!-- truncate -->
+
+소프트웨어 엔지니어로 일하고 있고 
 
 핀테크, 이커머스를 거쳐 지금은 분당에서 모빌리티 서비스를 만들고 있습니다.
 
